# async-ecommerce-playground

./: .env  .env.example  .gitignore  Makefile  README.md  TODO.md  docker-compose.yml
.cursor/plans/: async_microservices_stack_e45b8a74.plan.md  decrement_stock_on_shipped_0fa0531e.plan.md  stock_allocation_at_checkout_f838b099.plan.md  ws_shipping_notify_ui_e4a76d62.plan.md
postgres/: init.sql
services/order-worker/: CMakeLists.txt  Dockerfile  main.cpp
services/orders-api/: Dockerfile  bff_notify.go  go.mod  main.go  rabbit.go
services/web/: .dockerignore  Dockerfile  requirements.txt
services/web/app/: main.py
services/web/frontend/: package.json  vite.config.ts
services/web/frontend/src/: App.tsx  index.css
